Update navigation bar
   - Remove the header of kiali
   - update the header with sidebar menu action item
   - remove the Action button

Signed-off-by: inyee786 <intakhab.ali@mayadata.io>

--- a/src/components/Nav/Navigation.scss
+++ b/src/components/Nav/Navigation.scss
@@ -3,3 +3,10 @@
   top: 100px;
   border: 1px solid pink;
 }
+.header {
+  background-image: none;
+  background-color: white;
+}
+.pf-c-page__header-nav {
+  background-color: aqua !important;
+}
